--- a/mod.conf
+++ b/mod.conf
@@ -1,5 +1,6 @@
 name = atl_path
 title = Dirt Path
 description = This mod allows you to create paths with shovels 
-depends = 
+depends = default
 optional_depends = 
+supported_games = minetest
